# OrderMatch

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md
docs/: accounting.md  api.md  architecture.md  blind_spots.md
include/order_match/core/: instrument.hpp  matching_engine.hpp  order.hpp  order_book.hpp  types.hpp
include/order_match/engine/: engine_runner.hpp  engine_runtime.hpp  event.hpp  event_bus.hpp  execution_report.hpp  read_view.hpp  task.hpp
include/order_match/http/: codec.hpp
include/order_match/server/: http_pipeline.hpp  http_server.hpp  routes.hpp
src/client/: main.cpp
src/core/: matching_engine.cpp  order_book.cpp
src/engine/: engine_runner.cpp  engine_runtime.cpp
src/http/: codec.cpp
src/server/: http_pipeline.hpp  http_server.hpp  main.cpp  routes.hpp
tests/: engine_runtime_tests.cpp  http_codec_tests.cpp  http_pipeline_tests.cpp  order_book_tests.cpp
